# boolexpr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  pyproject.toml
ipynb/: example.ipynb
src/: CMakeLists.txt  exprnodemodule.c  main.c  main.cpp
src/boolexpr/: __init__.py  bdd.py  boolfunc.py  expr.py  exprnode.pyi  math.py  point.py  universe.py  util.py
src/boolexpr/boolalg/: boolfunc.py  expr.py
src/boolexpr/boolfunc/: __init__.py  expr.py  function.py  typing.py  utils.py
src/boolexpr/expression/: build.py  cardinality.py  interface.py  kind.py  node.py  simple.py  transform.py
src/boolexpr/expression/node/: cardinality.py  point.py  transform.py  utils.py
src/boolexpr/io/: grammar.lark  parser.py
src/boolexpr/io/visualization/: expression.py
src/boolexpr/parsing/: boolexpr.py  dimacs.py  lex.py  token.py
src/boolexpr/variable/: identifier.py  index.py  universe.py  variable.py
src/core/: CMakeLists.txt
src/core/src/: CMakeLists.txt  argset.c  binary.c  boolexpr.c  bubble.c  compose.c  dict.c  flatten.c  product.c  simple.c  util.c
src/exprnode/: CMakeLists.txt
src/exprnode/include/boolexpr/: boolexpr.h
src/exprnode/src/: CMakeLists.txt  array.c  nnf.c  set.c  vector.c
