[project]
name = "boolexpr"
version = "0.0.1"
description = "python binding for @cjdrake C BoolExpr library found in PyEDA"
readme = "README.md"
authors = [
    { name = "Kirill Shumilov", email = "shumilov.kirill98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"
